-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.1
-
None
-
-
6d81d010a (dev)
<Issue>
Opening an updated .ts file while the previous version of .ts file is open in Qt Linguist doesn't show the content of updated .ts file in the UI.
<Reproduction Step>
(1) Clone https://git.qt.io/mikio_hirai/multi-language-blog/-/tree/master?ref_type=heads
C:\work\i18n_test\repro>git clone git@git.qt.io:mikio_hirai/multi-language-blog.git
(2) Checkout to 1d71cfa
C:\work\i18n_test\repro\multi-language-blog>git checkout 1d71cfa
(3) Run lupdate (The generated .ts is attached to this ticket)
C:\work\i18n_test\repro\multi-language-blog>C:\Qt\6.7.1\msvc2019_64\bin\lupdate.exe . -extensions qml -ts i18n/qml_initial_ja_JP.ts Scanning directory '.'... Updating 'i18n/qml_initial_ja_JP.ts'... Found 2 source text(s) (2 new and 0 already existing)
(4) Open the generated qml_initial_ja_JP.ts in Qt Linguist (Qt 6.7.1 msvc2019)

(5) Update the Main.qml with the attached Main.qml
<updated Main.qml>
Not Evaluated 
(6) Run lupdate again to update the qml_initial_ja_JP.ts.
C:\work\i18n_test\repro\multi-language-blog>C:\Qt\6.7.1\msvc2019_64\bin\lupdate.exe . -extensions qml -ts i18n/qml_initial_ja_JP.ts Scanning directory '.'... Updating 'i18n/qml_initial_ja_JP.ts'... Found 4 source text(s) (2 new and 2 already existing)
(7) Open the updated qml_initial_ja_JP.ts in the already opened Qt Linguist with the previous .ts file opened.


<Expected Result>
The content of the updated qml_initial_ja_JP.ts gets displayed in Qt Lingiust UI.
<Actual Result>
The Qt Linguist UI doesn't get updated.
