linguist: correctly reopen an updated file

If a file already open in Linguist is modified externally and then
reopened within the same Linguist session, the source code view
does not reflect the updates.
Take into account the modification time of the file that is opened to
update the source code if the content was changed.

Fixes: QTBUG-128603
Fixes: QTBUG-128604
Change-Id: I3cc81780efa8e358705484caa54b4fa497d9cda6
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>